library/database_universe/test/errors/class/invalid_name.dart
// must not be abstract

import 'package:database_universe/database_universe.dart';

@collection
abstract class Model {
  late int id;
}
